# min-block-cli

./: Cargo.toml  README.md  blocks.json  transaction.json
src/: main.rs
src/modules/: block.rs  blockchain.rs  mod.rs  transaction.rs
