[package]
name = "blockchain_minimal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.8.5"
p256 = { version = "0.13", features = ["ecdsa"] }
rand_core = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
hex = "0.4.3"
